--- a/index.html
+++ b/index.html
@@ -5,8 +5,252 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/9c6bb6208c.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
-    
+    <!-- header start -->
+    <header>
+
+    </header>
+    <!-- header end -->
+    <main>
+        <!-- header banner start -->
+        <section class="container">
+            <div class="main-headers">
+                <div class="header-left">
+                    <h1 class="header-title">The Greatest show on the earth</h1>
+                    <p class="header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus porro similique consequatur nemo ducimus, esse inventore, ipsam quisquam maxime ea suscipit beatae eligendi distinctio, facilis incidunt minus amet fugit error. Quis unde saepe veritatis beatae?</p>
+                    <a href="#" target="_blank" class="header-btn">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                </div>
+                <div class="header-right">
+                    <img src="assets/images/Banner Image.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- header banner end -->
+        <!-- blogs start -->
+        <section class="container">
+            <div class="main-blogs">
+                <div class="blogs-link">
+                    <a href="#" target="_blank" class="comon-btn">Upcoming Match</a>
+                    <a href="#" class="comon-btn">All Group</a>
+                    <a href="#" class="focus-btn">Blog</a>
+                </div>
+                <div id="blog-two" class="blogs">
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbnail">
+                            <img src="assets/images/Blog Image.png" alt="">
+                        </div>
+                        <div class="blog-btn">
+                            <a href="#" target="_blank">Transfar</a>
+                        </div>
+                        <div class="blog-details">
+                            <p class="blog-title">
+                                Transfer Live: Chlesea in talks over Kimpenbe transfer
+                            </p>
+                        </div>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"><span>10h</span></i>
+                            </div>
+                            <div class="blog-comment">
+                                <i class="fa-regular fa-comment-dots"><span>23</span></i>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- blogs end -->
+    </main>
+    <!-- footer start -->
+    <footer>
+        <div class="footer-title">
+            <h2>Goal</h2>
+        </div>
+        <hr>
+        <div class="footer-link">
+            <ul>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Privacy Ploicy</a></li>
+                <li><a href="#">Privacy Settings</a></li>
+                <li><a href="#">Goal App</a></li>
+                <li><a href="#">Goal Live</a></li>
+            </ul>
+        </div>
+    </footer>
+    <!-- footer end -->
 </body>
 </html>
