--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <div class="main-headers">
                 <div class="header-left">
                     <h1 class="header-title">The Greatest show on the earth</h1>
+                    <div class="paragraph">
+                        
                     <p class="header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus porro similique consequatur nemo ducimus, esse inventore, ipsam quisquam maxime ea suscipit beatae eligendi distinctio, facilis incidunt minus amet fugit error. Quis unde saepe veritatis beatae?</p>
+                    </div>
                     <a href="#" target="_blank" class="header-btn">Watch Live <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <div class="header-right">
@@ -208,7 +211,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="blog">
+                    <article id="hidden" class="blog">
                         <div class="blog-thumbnail">
                             <img src="assets/images/Blog Image.png" alt="">
                         </div>
@@ -229,7 +232,11 @@
                             </div>
                         </div>
                     </article>
-                </div>
+                    
+                </div> 
+                <div class="tab-btn">
+                    <a href="#">View All</a>
+                </div>  
             </div>
         </section>
         <!-- blogs end -->
