--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
             <div class="main-headers">
                 <div class="header-left">
                     <h1 class="header-title">The Greatest show on the earth</h1>
-                    <div class="paragraph">
-                        
+                    <div class="paragraph">     
                     <p class="header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus porro similique consequatur nemo ducimus, esse inventore, ipsam quisquam maxime ea suscipit beatae eligendi distinctio, facilis incidunt minus amet fugit error. Quis unde saepe veritatis beatae?</p>
                     </div>
-                    <a href="#" target="_blank" class="header-btn">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                    <button class="header-btn"><a href="#" target="_blank">Watch Live <i class="fa-solid fa-angle-right"></i></a></button>
                 </div>
                 <div class="header-right">
                     <img src="assets/images/Banner Image.png" alt="">
@@ -38,7 +37,7 @@
         <section class="container">
             <div class="main-blogs">
                 <div class="blogs-link">
-                    <a href="#" target="_blank" class="comon-btn">Upcoming Match</a>
+                    <a href="upcoming.html" target="_blank" class="comon-btn">Upcoming Match</a>
                     <a href="#" class="comon-btn">All Group</a>
                     <a href="#" class="focus-btn">Blog</a>
                 </div>
@@ -231,13 +230,12 @@
                                 <i class="fa-regular fa-comment-dots"><span>23</span></i>
                             </div>
                         </div>
-                    </article>
-                    
-                </div> 
-                <div class="tab-btn">
-                    <a href="#">View All</a>
-                </div>  
+                    </article>                   
+                </div>   
             </div>
+            <div class="tab-btn">
+                <a href="#">View All</a>
+            </div> 
         </section>
         <!-- blogs end -->
     </main>
